--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -32,3 +32,11 @@
 [[constraint]]
   name = "github.com/go-sql-driver/mysql"
   version = "1.4.1"
+
+[[constraint]]
+  name = "github.com/gorilla/mux"
+  version = "1.6.2"
+
+[[constraint]]
+  name = "github.com/mattn/go-sqlite3"
+  version = "1.10.0"
