--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -40,3 +40,7 @@
 [[constraint]]
   name = "github.com/mattn/go-sqlite3"
   version = "1.10.0"
+
+[[constraint]]
+  name = "github.com/lib/pq"
+  version = "1.0.0"
